add logo background

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -6,11 +6,12 @@ contributes:
   formats:
     revealjs:
       theme: [default, aagi.scss]
-      background-image: logo.svg
-      background-size: contain
-      background-position: 85% 15%
       date-format: long
       footer: " "
+      background-image: logo.svg
+      background-size: contain
+      background-repeat: no-repeat
+      background-position: top right
       title-slide-attributes: 
         data-background-image: title-slide-main.png
         data-background-size: 1050px auto
