move images back to extension folder del assets

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -11,6 +11,6 @@ contributes:
       footer: " "
       logo: ../assets/aagi-logo.svg
       title-slide-attributes: 
-        data-background-image: ../assets/title-slide-main.png
+        data-background-image: title-slide-main.png
         data-background-size: 1050px auto
         data-background-position: 50% 85%
