Move highlight-style into _extension.yml

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -14,3 +14,4 @@ contributes:
         data-background-image: title-slide-main.png
         data-background-size: 1050px auto
         data-background-position: 50% 85%
+      highlight-style: breeze
