--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -5,6 +5,9 @@ quarto-required: ">=1.5.0"
 contributes:
   formats:
     docx:
-      # See https://quarto.org/docs/output-formats/ms-word-templates.html
-      reference-doc: aagi.docx
+      reference-doc: AAGI_Word_Style_Template.docx
+      toc: true
+      colorlinks: true
+      fig-width: 7
+      fig-height: 7
 
