--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -4,6 +4,17 @@ version: 1.0.0
 quarto-required: ">=1.5.0"
 contributes:
   formats:
+    revealjs:
+      theme: [default, aagi.scss]
+      date-format: long
+      slide-number: true
+      footer: " "
+      logo: aagi-logo.svg
+      title-slide-attibutes:
+        data-background-image: title-slide-main.png
+        data-background-size: 1050px auto
+        data-background-position: 50% 85%
+      highlight-style: breeze
     pdf:
       fig-width: 7
       fig-height: 7
