Add my name to the author list

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -1,5 +1,5 @@
 title: AAGIQuarto
-author: Adam H. Sparks
+author: Adam H. Sparks and Vinh Thiem Ma
 version: 1.0.0
 quarto-required: ">=1.4.0"
 contributes:
