Add in the word and pdf output (#9)
* update with all three output'

* add in a template.qmd

* Add in the extension file

* Drop in the assets folder and the ref file

* Add my name to the author list

* rename to template-output.qmd

* Adds missing assets folder

* Add aagi logo to latex assets

* Correct filename

* fix path to resources

* add resources for PDF output

* fix filepath to AAGI_logo.pdf

---------

Co-authored-by: Adam H. Sparks <adamhsparks@icloud.com>

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -1,17 +1,34 @@
 title: AAGIQuarto
-author: Adam H. Sparks
+author: Adam H. Sparks and Vinh Thiem Ma
 version: 1.0.0
 quarto-required: ">=1.4.0"
 contributes:
   formats:
     revealjs:
-      theme: [default, aagi.scss]
+      theme: [default, Revealjs/aagi.scss]
       date-format: long
       slide-number: true
       footer: " "
-      logo: aagi-logo.svg
-      title-slide-attributes: 
-        data-background-image: title-slide-main.png
+      logo: Revealjs/aagi-logo.svg
+      title-slide-attributes:
+        data-background-image: Revealjs/title-slide-main.png
         data-background-size: 1050px auto
         data-background-position: 50% 85%
       highlight-style: breeze
+    pdf:
+      template: pdf/AAGI_template.tex
+      format-resources:
+        - assets/AAGI_logo.pdf
+        - assets/Partners.pdf
+      pdf-enginge: xelatex
+      fig-width: 7
+      fig-height: 7
+      fontsize: 11pt
+      geometry:
+        - top=2.54cm
+        - bottom=3cm
+        - right=1.91cm
+        - includefoot
+      linkcolor: aagiblue
+    docx:
+      reference-doc: Word/AAGI_Word_Style_Template.docx
