--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -1,34 +1,35 @@
 title: AAGIQuarto
-author: Adam H. Sparks and Vinh Thiem Ma
+author: Adam H. Sparks, Vinh Thiem Ma, James J Balamuta
 version: 1.0.0
 quarto-required: ">=1.4.0"
 contributes:
   formats:
     revealjs:
-      theme: [default, Revealjs/aagi.scss]
+      theme: [default, revealjs/aagi.scss]
       date-format: long
       slide-number: true
       footer: " "
-      logo: Revealjs/aagi-logo.svg
+      logo: assets/aagi-logo.svg
       title-slide-attributes:
-        data-background-image: Revealjs/title-slide-main.png
+        data-background-image: assets/title-slide-main.png
         data-background-size: 1050px auto
         data-background-position: 50% 85%
       highlight-style: breeze
+      overview: true
+      progress: true
+      touch: true
+      chalkboard: true
+      execute:
+        echo: true
     aagi-pdf-report:
-      template: pdf/AAGI_template.tex
+      template: pdf/aagi_report.tex
+      format-resources:
+        - assets/aagi_logo.pdf
+        - assets/partners.pdf
+    aagi-pdf-short-report:
+      template: short_report/aagi_short_report.tex
       format-resources:
         - assets/AAGI_logo.pdf
         - assets/Partners.pdf
-      pdf-enginge: xelatex
-      fig-width: 7
-      fig-height: 7
-      fontsize: 11pt
-      geometry:
-        - top=2.54cm
-        - bottom=3cm
-        - right=1.91cm
-        - includefoot
-      linkcolor: aagiblue
     aagi-docx-report:
-      reference-doc: docx/AAGI_Word_Style_Template.docx
+      reference-doc: docx/aagi_report_word.docx
