--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -4,7 +4,7 @@ version: 1.0.0
 quarto-required: ">=1.4.0"
 contributes:
   formats:
-    revealjs:
+    aagi-revealjs:
       theme: [default, revealjs/aagi.scss]
       date-format: long
       slide-number: true
