--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -1,5 +1,5 @@
 title: AAGIQuarto
-author: Adam H. Sparks, Vinh Thiem Ma, Sam Rogers, Julian Taylor, Russel Edson, James J Balamuta
+author: Adam H. Sparks, James J Balamuta, Russel Edson, Vinh Thiem Ma, Rose Megirian, Sam Rogers, Julian Taylor
 version: 1.0.0
 quarto-required: ">=1.4.0"
 contributes:
