Add back the format-resources option

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -50,5 +50,8 @@ contributes:
           highlight: false
           size: small
           prompt: true
+      format-resources:
+        - assets/aagi_logo.pdf
+        - assets/partners.pdf
     docx+report:
       reference-doc: docx-report/aagi-docx-report-template.docx
