Remove the csl option in the extension so the biometric.csl is not needed and add in the _quarto.yml file to be able to publish (#13)
* Test to see push to which branch

* Test to see push to which branch

* Add in the pdf short report format

* Table float option and move all include-in-head to template

* Add in the blah ref

* Add in the float option for figure

* Move the yaml block config into extension

* Fix my typo

* Turn on the makefile for short report

* Change the format to match with the extension

* Rename to pdf-report to match with Makefile

* Change the "-" in the format to "+" to enable quarto to render

* Move to the correct location

* Update the file path name

* Delete the citation style language in the yaml block

* Add in the previous _quarto.yml to publish

* Take out the csl option in the extension

* Put back the csl option and refer to the correct file path

* Remove duplicate toc and recolour hyperlink

* Remove duplication of pdf short report output

* Change the short pdf .qmd file name

* Put a copy of biometrics.csl into the extension assets folder

* Remove the coma after the separator and fix the file path for logo

* Put the logo file into the correct file path

* Update the function name in the assets function

* Add back the format-resources option

* Remove the asset/ in the fig path

* Remove unneccessary file

* Remove unnecessary yaml options in the extension

* Place the bibliography into the demo doc

* Match the layout of the pdf report to the short pdf report

* Remove the logo at the footer

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -23,34 +23,16 @@ contributes:
         echo: true
     pdf+report:
       template: pdf-report/aagi-pdf-report-template.tex
+      csl: assets/biometrics.csl
       format-resources:
         - assets/aagi_logo.pdf
         - assets/partners.pdf
     pdf+short+report:
       template: short-pdf-report/aagi-short-pdf-report.tex
-      fontsize: 12pt
-      papersize: a4
-      toc: false
-      number-sections: false
-      pdf-engine: xelatex
-      mainfont: Proxima Nova
-      links-as-footnotes: false
-      bibliography: references.bib
-      csl: biometrics.csl
+      csl: assets/biometrics.csl
       link-citations: true
-      knitr:
-        opts_chunk: 
-          fig.path: figure/
-          fig.align: center
-          fig.show: hold
-          fig.pos: H
-          comment: NA
-          background: white
-          highlight: false
-          size: small
-          prompt: true
       format-resources:
-        - assets/AAGI_logo.pdf
-        - assets/Partners.pdf
+        - assets/aagi_logo.pdf
+        - assets/partners.pdf
     docx+report:
       reference-doc: docx-report/aagi-docx-report-template.docx
