--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,44 +1,54 @@
 on:
-  push:
-    branches: [main, master]
-  release:
-      types: [published]
-  workflow_dispatch:
-    
+    push:
+      branches: [main, master]
+    release:
+        types: [published]
+    workflow_dispatch: {}
+      
 name: demo-website
 
 jobs:
-  demo-website:
-    runs-on: ubuntu-latest
-    # Only restrict concurrency for non-PR jobs
-    concurrency:
-      group: quarto-website-${{ github.event_name != 'pull_request' || github.run_id }}
-    permissions:
-      contents: write
-    steps:
-      - name: "Check out repository"
-        uses: actions/checkout@v4
+    demo-page:
+        runs-on: ubuntu-latest
+        # Only restrict concurrency for non-PR jobs
+        concurrency:
+          group: quarto-publish-${{ github.event_name != 'pull_request' || github.run_id }}
+        permissions:
+          contents: write
+        steps:
+        - name: "Check out repository"
+          uses: actions/checkout@v4
 
-      # To render using knitr, we need a few more setup steps...
-      # If we didn't want the examples to use `engine: knitr`, we could
-      # skip a few of the setup steps.
-      - name: "Setup R"
-        uses: r-lib/actions/setup-r@v2
+        # To render using knitr, we need a few more setup steps...
+        # If we didn't want the examples to use `engine: knitr`, we could
+        # skip a few of the setup steps.
+        - name: "Setup R"
+          uses: r-lib/actions/setup-r@v2
 
-      - name: "Setup R dependencies for Quarto's knitr engine"
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
+        - name: "Setup R dependencies for Quarto's knitr engine"
+          uses: r-lib/actions/setup-r-dependencies@v2
+          with:
             packages:
               any::knitr
               any::rmarkdown
               any::downlit
               any::xml2
+              any::ggplot2
 
       # Back to our regularly scheduled Quarto output
-      - name: "Set up Quarto"
-        uses: quarto-dev/quarto-actions/setup@v2
+        - name: "Set up Quarto"
+          uses: quarto-dev/quarto-actions/setup@v2
+          with:
+            version: "pre-release"
+            tinytex: true # required for beamer
 
-      - name: "Render and Publish"
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
+        - name: Add extension directly into demos
+          working-directory: ./docs/demos
+          run: |        
+            quarto add --no-prompt AAGI-AUS/AAGIQuarto
+
+        - name: Publish to GitHub Pages (and render)
+          uses: quarto-dev/quarto-actions/publish@v2
+          with:
+              target: gh-pages
+              path: docs
