--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,16 +1,11 @@
 on:
     push:
-      branches: [main, master]
+      branches: [main]
     release:
         types: [published]
     workflow_dispatch: {}
-      
-name: AAGI-Quarto-demo-website
 
-# you need these permissions to publish to GitHub pages
-permissions: 
-    contents: write
-    pages: write
+name: demo-website
 
 jobs:
     demo-page:
@@ -49,13 +44,11 @@ jobs:
 
         - name: Add extension directly into demos
           working-directory: ./docs/demos
-          run: |        
-            quarto add --no-prompt AAGI-AUS/AAGIQuarto
+          run: |
+            quarto add --AAGI-AUS/AAGIQuarto
 
         - name: Publish to GitHub Pages (and render)
           uses: quarto-dev/quarto-actions/publish@v2
           with:
-            target: gh-pages
-            path: docs
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              target: gh-pages
+              path: docs
