--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,3 +51,4 @@ jobs:
           uses: quarto-dev/quarto-actions/publish@v2
           with:
               target: gh-pages
+              path: docs/demos
