--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,8 +37,8 @@ jobs:
       
       # install ms-corefonts for Arial font since Proxima Nova isn't available
         - name: "Install ms-corefonts"
-          run: sudo apt-get install ttf-mscorefonts-installer -y \
-                sudo fc-cache -f
+          run: sudo apt-get install ttf-mscorefonts-installer -y
+               sudo fc-cache -f
 
       # Back to our regularly scheduled Quarto output
         - name: "Set up Quarto"
