--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,10 @@ jobs:
       
       # install ms-corefonts for Arial font since Proxima Nova isn't available
         - name: "Install ms-corefonts"
-          run: echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
+          run: |
+            echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
+            sudo apt install ttf-mscorefonts-installer
+      
       # update font cache
         - name: "Update font cache"
           run: sudo fc-cache -fv
