Add in the short version of docx output

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -36,6 +36,8 @@ contributes:
         - assets/partners.pdf
     docx+report:
       reference-doc: docx-report/template.docx
+    docx+short+report:
+      reference-doc: docx-short-report/template.docx
     pptx:
       reference-doc: pptx/template.pptx
       toc: true
