Turn on the toc option for docx report

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -36,6 +36,7 @@ contributes:
         - assets/partners.pdf
     docx+report:
       reference-doc: docx-report/template.docx
+      toc: true
     docx+short+report:
       reference-doc: docx-short-report/template.docx
     pptx:
