Specify using xelatex engine

--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -23,12 +23,14 @@ contributes:
         echo: true
     pdf+report:
       template: pdf-report/template.tex
+      engine: xelatex
       csl: assets/biometrics.csl
       format-resources:
         - assets/aagi_logo.pdf
         - assets/partners.pdf
     pdf+short+report:
       template: pdf-short-report/template.tex
+      engine: xelatex
       csl: assets/biometrics.csl
       link-citations: true
       format-resources:
