update quarto extension

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -1,32 +1,2 @@
 project:
-  type: website
-  resources:
-   - assets/*
-
-website:
-  title: "AAGIQuarto"
-  reader-mode: true
-  repo-url: https://github.com/AAGI-AUS/AAGIQuarto
-  repo-actions: [edit, issue]
-  margin-header: |
-    ![](/demos/assets/aagi-logo.svg)
-  body-footer: |
-    ![](/demos/assets/Partners.svg)
-  sidebar:
-    style: "floating"
-    search: true
-    tools:
-      - icon: github
-        href: https://github.com/AAGI-AUS/AAGIQuarto
-    contents: 
-      - text: "Home"
-        file: index.qmd
-      - section: "Extra"
-        contents:
-        - release-notes.qmd
-format: 
-  html:
-    toc: true
-    theme: 
-      - none
-      - _extensions/aagi/revealjs/aagi.scss
+  type: default
