--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,13 +34,13 @@ jobs:
               any::downlit
               any::xml2
               any::ggplot2
-      
+
       # install ms-corefonts for Arial font since Proxima Nova isn't available
         - name: "Install ms-corefonts"
           run: |
             echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
             sudo apt install ttf-mscorefonts-installer
-      
+
       # update font cache
         - name: "Update font cache"
           run: sudo fc-cache -fv
@@ -49,7 +49,7 @@ jobs:
         - name: "Set up Quarto"
           uses: quarto-dev/quarto-actions/setup@v2
           with:
-            version: "pre-release"
+            version: "release"
             tinytex: true # required for PDF reports
 
         - name: Add extension directly into demos
