--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -1,6 +1,6 @@
 title: AAGIQuarto
-author: Adam H. Sparks, James J Balamuta, Russel Edson, Vinh Thiem Ma, Rose Megirian, Zhanglong Cao, Sam Rogers, Julian Taylor
-version: 1.0.1
+author: Adam H. Sparks, James J. Balamuta, Russel Edson, Vinh Thiem Ma, Rose Megirian, Zhanglong Cao, Sam Rogers, Julian Taylor
+version: 1.0.3
 quarto-required: ">=1.4.0"
 contributes:
   formats:
