--- a/_extensions/aagi/_extension.yml
+++ b/_extensions/aagi/_extension.yml
@@ -1,5 +1,5 @@
 title: AAGIQuarto
-author: Adam H. Sparks, James J. Balamuta, Russel Edson, Vinh Thiem Ma, Rose Megirian, Zhanglong Cao, Sam Rogers, Julian Taylor
+author: Adam H. Sparks, James J. Balamuta, Russell Edson, Vinh Thiem Ma, Rose Megirian, Zhanglong Cao, Sam Rogers, Julian Taylor
 version: 1.0.3
 quarto-required: ">=1.4.0"
 contributes:
